# 312Coin

./: .gitignore  312Coin.cabal  README.md  stack.yaml
.stack-work/install/x86_64-osx/lts-9.14/8.0.2/flag-cache/: 312Coin-0.1.0.0-1Gdh5s75tRnLADuY0ZMurb  312Coin-0.1.0.0-72Xf5w79EtWL3SSsUWQqv3  312Coin-0.1.0.0-91BkfT1fW8m3z2HndxAtPA  312Coin-0.1.0.0-G7NtcrNisv1AYvtycpKYak  312Coin-0.1.0.0-GKmfU1iUF8z96Kd3ihVeed  GenericPretty-1.2.1-3m7fEhDoQGz54BsJnbKOxl
.stack-work/install/x86_64-osx/lts-9.14/8.0.2/lib/x86_64-osx-ghc-8.0.2/: libHS312Coin-0.1.0.0-1Gdh5s75tRnLADuY0ZMurb-ghc8.0.2.dylib  libHS312Coin-0.1.0.0-3NylGJnbwqAAplgCLpSCLW-ghc8.0.2.dylib  libHS312Coin-0.1.0.0-G7NtcrNisv1AYvtycpKYak-ghc8.0.2.dylib  libHS312Coin-0.1.0.0-GKmfU1iUF8z96Kd3ihVeed-ghc8.0.2.dylib  libHSGenericPretty-1.2.1-3m7fEhDoQGz54BsJnbKOxl-ghc8.0.2.dylib
.stack-work/install/x86_64-osx/lts-9.14/8.0.2/lib/x86_64-osx-ghc-8.0.2/312Coin-0.1.0.0-1Gdh5s75tRnLADuY0ZMurb/: Lib.dyn_hi  Lib.hi  Server.dyn_hi  Server.hi
.stack-work/install/x86_64-osx/lts-9.14/8.0.2/lib/x86_64-osx-ghc-8.0.2/312Coin-0.1.0.0-3NylGJnbwqAAplgCLpSCLW/: Lib.dyn_hi  Lib.hi  Server.dyn_hi  Server.hi
.stack-work/install/x86_64-osx/lts-9.14/8.0.2/lib/x86_64-osx-ghc-8.0.2/312Coin-0.1.0.0-72Xf5w79EtWL3SSsUWQqv3/: Lib.dyn_hi  Lib.hi  (+2 more)
.stack-work/install/x86_64-osx/lts-9.14/8.0.2/pkgdb/: 312Coin-0.1.0.0-3NylGJnbwqAAplgCLpSCLW.conf  312Coin-0.1.0.0-91BkfT1fW8m3z2HndxAtPA.conf  312Coin-0.1.0.0-G7NtcrNisv1AYvtycpKYak.conf  GenericPretty-1.2.1-3m7fEhDoQGz54BsJnbKOxl.conf  package.cache
app/: Main.hs
src/: Lib.hs  Server.hs  scratch.hs
(+10 files in other folders)
