name:                312Coin
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/312Coin#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2017 Author name here
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:       base >= 4.7 && < 5
                      , cryptohash
                      , aeson
                      , bytestring
                      , binary
                      , time
                      , mtl
  default-language:    Haskell2010

executable 312Coin-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , 312Coin
  default-language:    Haskell2010

test-suite 312Coin-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , 312Coin
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/312Coin
